// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render hides the summary when missing 1`] = `
<div
  data-css-kc2zyq=""
>
  <div
    data-css-154k5mk=""
  >
    <div
      data-css-1t62idy=""
    >
      <div
        data-css-iajwtw=""
      >
        <h3>
          Foo
        </h3>
        <span>
          HB1234
        </span>
      </div>
      <p>
        01/01/2010
      </p>
    </div>
  </div>
  <div
    data-css-1e193l7=""
  >
    <Button
      styles={
        Object {
          "data-css-wkh0gw": "",
        }
      }
      to="http://www.test.com/slip"
    >
      Take Action
    </Button>
    <Button
      isSecondary={true}
      styles={
        Object {
          "data-css-wkh0gw": "",
        }
      }
      to="/bill/1234"
    >
      More Info
    </Button>
  </div>
</div>
`;

exports[`#render renders properly 1`] = `
<div
  data-css-kc2zyq=""
>
  <div
    data-css-154k5mk=""
  >
    <div
      data-css-1t62idy=""
    >
      <div
        data-css-iajwtw=""
      >
        <h3>
          Foo
        </h3>
        <span>
          HB1234
        </span>
      </div>
      <p>
        01/01/2010
      </p>
    </div>
    <p
      data-css-jpl8hl=""
    >
      A bill, fantastic
    </p>
  </div>
  <div
    data-css-1e193l7=""
  >
    <Button
      styles={
        Object {
          "data-css-wkh0gw": "",
        }
      }
      to="http://www.test.com/slip"
    >
      Take Action
    </Button>
    <Button
      isSecondary={true}
      styles={
        Object {
          "data-css-wkh0gw": "",
        }
      }
      to="/bill/1234"
    >
      More Info
    </Button>
  </div>
</div>
`;
